--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
-frontend:
-  build: .
-  environment:
-    PORT: 8080
-  ports:
-    - 8080:8080
+version: '2'
+
+services:
+  frontend:
+    build: .
+    image: anrop/anrop-frontend
+    environment:
+      PORT: 8080
+    ports:
+      - 8080:8080
